--- a/src/common/base.css
+++ b/src/common/base.css
@@ -14,6 +14,23 @@
   }
 }
 
+/* 컴포넌트 영역 스타일링 */
+.ui-component {
+  border: 1px solid currentColor;
+  margin-block: 10px;
+  padding: 10px;
+}
+
+/* copy component */
+.copy-component {
+  display: flex;
+  background: black;
+  color: white;
+  margin-block-start: 0.5em;
+  padding: 0.5em 1em;
+  border-radius: 4px;
+}
+
 /* 
   - margin-block: 20px; 
       >> top하고 bottom에게만 값 주고 싶을때
