--- a/src/common/base.css
+++ b/src/common/base.css
@@ -21,6 +21,11 @@
   padding: 10px;
 }
 
+/* 기본 스타일 */
+body {
+  font-family: 'SUIT Variable', sans-serif;
+}
+
 /* copy component */
 .copy-component {
   display: flex;
