--- a/src/common/base.css
+++ b/src/common/base.css
@@ -1,13 +1,16 @@
 /* 기본 스타일 */
-/* css 에제 본문 스타일 */
-.css {
-  margin: 20px;
+body {
+  font-family: 'SUIT Variable', sans-serif;
+}
 
-  a {
-    text-decoration: none;
-    color: inherit;
-    display: block;
-  }
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* 여백 */
+.spacing-20 {
+  margin: 20px;
 
   h1 {
     margin-block: 20px;
@@ -15,6 +18,7 @@
 }
 
 /* 컴포넌트 영역 스타일링 */
+/* ui-component */
 .ui-component {
   border: 1px solid currentColor;
   margin-block: 10px;
