--- a/src/common/base.css
+++ b/src/common/base.css
@@ -3,9 +3,16 @@ body {
   font-family: 'SUIT Variable', sans-serif;
 }
 
+/* 링크(요소) 스타일 */
 a {
   text-decoration: none;
   color: inherit;
+}
+
+/* 테이블 스타일 */
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 /* 여백 */
